<resources>
    <string name="app_name">Cos Roulette</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_new_filter_dialog_title">Add New Filter</string>
    <string name="nav_header_title">Cos Roulette</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="update_filter_dialog_title">Edit Filter</string>
    <string name="submit">submit</string>
    <string name="edit">Edit</string>
    <string name="title">Title</string>
    <string name="channel_title">Channel Title</string>
    <string name="filters_button">Add\n Filters</string>
    <string name="filters_heading">Add Filter</string>
    <string name="delete">Delete</string>
    <string name="nav_bookmarks">Bookmarks</string>
    <string name="nav_submit_content">Submit Content</string>
    <string name="nav_head_contact">Contact</string>
    <string name="nav_instagram">Instagram</string>
    <string name="nav_sendfeedback">Send Feedback</string>
    <string name="nav_head_information">Information</string>
    <string name="nav_about">About</string>
    <string name="nav_head_review">Enjoy Cos Roulette?</string>
    <string name="review_app">Review in the Play Store</string>
    <string name="nav_donate">Donate</string>
    <string name="filter_instructions">Swipe to remove Filter</string>
    <string name="bookmarks_instructions">Tap to Play, Swipe to remove</string>
    <string name="filter_example_text">i.e. Black Woman, Fenty, Allisa Ashley</string>
    <string name="under_construction">Under Construction</string>
    <string name="sample_youtube_url">https://www.youtube.com/watch?v=a3ICNMQW7Ok</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_submit_content">Submit Content</string>
    <string name="faq">FAQ</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="submit_content_description">
        Cos Roulette gets its content from YouTube, but given that YouTube has a vast amount
        of content, its difficult to get new and small content creators more exposure.
        In order to alleviate that, we\'ve created our own pool of videos to choose from.
        All we need is the link to your video and the type of content it produces. (Hair, Makeup, Skin or Nails)
    </string>
    <string name="filter_instructions_text">
        Tap the <b>+</b> button above to add filters. Filters allow for filtering of Selected Content.
        You can filter by your favorite content creator, your race, favorite brand, etc.
    </string>
    <string name="category_help_text">Selected Content</string>

    <string-array name="cos_categories_array">
        <item>Select Category</item>
        <item>Makeup</item>
        <item>Hair</item>
        <item>Skin</item>
        <item>Nails</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
