<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SubmitContentActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/title_activity_submit_content"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="24sp" />
        </androidx.appcompat.widget.Toolbar>

        <View
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="2dp" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/submit_content_description"
                    android:textStyle="italic"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:text="@string/under_construction"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textSize="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:text="Will be available in upcoming updates..."
                    android:textStyle="italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/submit_content_url"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/sample_youtube_url"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/submit_content_categories"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </Spinner>

                <Button
                    android:id="@+id/submit_content_submit_button"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit" />

                <ProgressBar
                    android:id="@+id/submit_content_progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/close_submit_content_fab"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@android:color/background_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_delete" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>